commented out the second title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- Only one `<title>` should be used; multiple titles can cause unexpected behavior and negatively impact SEO and accessibility. -->
 		<title>Vase Vista - Artisanal Vases</title>
-		<title>Vase Vista - Artisanal Vases</title>
+		<!-- <title>Vase Vista - Artisanal Vases</title> -->
 		<meta
 			name="description"
 			content="Elevating spaces through thoughtfully designed vessels that blend form and function in perfect harmony." />
@@ -180,7 +180,7 @@ Det finns många sätt att göra en webbplats mer tillgänglig, till exempel att
 								alt="picture of a dining table with candles on it " />
 							<div class="quote-box">
 								<!-- a-tag, should be p-tag -->
-								<a>"Simplicity is the ultimate sophistication."</a>
+								<p>"Simplicity is the ultimate sophistication."</p>
 							</div>
 						</div>
 						<div class="philosophy-text">
